5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1575_2896.log
== TEST (2019-03-12 21:30:31) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = 

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 4
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:31:08) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas
print()
-- OUTPUT:
BOOMERANG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:31:14) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas
print()
-- EXECUTION TIME:
0.153039
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:31:41) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas
print("var")
-- OUTPUT:
BOOMERANG
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:31:48) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas
print("var")
-- EXECUTION TIME:
0.258711
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:32:38) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas print("var")
print("var")
-- OUTPUT:
BOOMERANG
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:32:44) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")

# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.178999
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:33:18) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")

# Impressao de saidas print("var")
print("var")
-- OUTPUT:
BOOMERANG
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:33:24) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")

# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.217536
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:45:23) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- OUTPUT:
BOOMERANG
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:45:31) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.161203
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:46:32) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- OUTPUT:
BOOMERANG
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:47:10) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("BOOMERANG")
-- EXECUTION TIME:
0.193907
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
BOOMERANG
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
BOOMERANG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:47:11) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("BOOMERANG")
-- OUTPUT:
BOOMERANG
BOOMERANG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:50:25) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.193379
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:50:33) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- OUTPUT:
BOOMERANG
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:50:47) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.167314
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:54:51) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("input("Digite o nome:BOOMERANG")")
-- OUTPUT:
BOOMERANG
input()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:55:18) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("input"Digite o nome:BOOMERANG")
-- EXECUTION TIME:
0.153819
-- ERROR:
  File "/home/codebench/codes/1575/2896/main.py", line 6
    print("input"Digite o nome:BOOMERANG")
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:01:09) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.285348
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:49:26) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- OUTPUT:
BOOMERANG
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:49:31) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.147121
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:49:34) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("Digite o nome:BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- OUTPUT:
BOOMERANG
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:49:59) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- OUTPUT:
BOOMERANG
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:50:03) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.209478
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:50:42) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.144039
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:50:44) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- OUTPUT:
BOOMERANG
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:50:50) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.173522
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:50:52) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- OUTPUT:
BOOMERANG
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:50:57) 
-- CODE:
# Use este codigo como ponto de partida
print("BOOMERANG")
# Leitura de valores de entrada
var = input("BOOMERANG")
# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.169794
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
BOOMERANG
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
BOOMERANG
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:51:39) 
-- CODE:
# Use este codigo como ponto de partida
print("Boomerang")
# Leitura de valores de entrada
var = input("Boomerang")
# Impressao de saidas print("var")
print("var")
-- OUTPUT:
Boomerang
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:51:42) 
-- CODE:
# Use este codigo como ponto de partida
print("Boomerang")
# Leitura de valores de entrada
var = input("Boomerang")
# Impressao de saidas print("var")
print("var")
-- EXECUTION TIME:
0.153666
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Boomerang
var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Boomerang
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:54:28) 
-- CODE:
# Use este codigo como ponto de partida
print("Boomerang")
# Leitura de valores de entrada
var = input("Boomerang")
# Impressao de saidas print("var")
print(var)
-- EXECUTION TIME:
0.178779
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Boomerang
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Boomerang
Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:54:33) 
-- CODE:
# Use este codigo como ponto de partida
print("Boomerang")
# Leitura de valores de entrada
var = input("Boomerang")
# Impressao de saidas print("var")
print(var)
-- OUTPUT:
Boomerang
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:54:38) 
-- CODE:
# Use este codigo como ponto de partida
print("Boomerang")
# Leitura de valores de entrada
var = input("Boomerang")
# Impressao de saidas print("var")
print(var)
-- EXECUTION TIME:
0.14212
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Boomerang
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Boomerang
Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:55:19) 
-- CODE:
# Use este codigo como ponto de partida
print("Boomerang")
# Leitura de valores de entrada
var = input("Boomerang")
# Impressao de saidas print("var")
print(var)
-- OUTPUT:
Boomerang
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:55:22) 
-- CODE:
# Use este codigo como ponto de partida
print("Boomerang")
# Leitura de valores de entrada
var = input("Boomerang")
# Impressao de saidas print("var")
print(var)
-- EXECUTION TIME:
0.149177
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Boomerang
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Boomerang
Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:55:41) 
-- CODE:
# Use este codigo como ponto de partida
print("Boomerang")
# Leitura de valores de entrada
var = input("Boomerang")
# Impressao de saidas print("var")
print(var)
-- EXECUTION TIME:
0.126792
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Boomerang
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Boomerang
Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:55:44) 
-- CODE:
# Use este codigo como ponto de partida
print("Boomerang")
# Leitura de valores de entrada
var = input("Boomerang")
# Impressao de saidas print("var")
print(var)
-- OUTPUT:
Boomerang
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:56:23) 
-- CODE:
# Use este codigo como ponto de partida
print("Python")
# Leitura de valores de entrada
var = input("Python")
# Impressao de saidas print("var")
print(var)
-- OUTPUT:
Python
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:56:25) 
-- CODE:
# Use este codigo como ponto de partida
print("Python")
# Leitura de valores de entrada
var = input("Python")
# Impressao de saidas print("var")
print(var)
-- EXECUTION TIME:
0.167708
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Python
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Python
Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:57:17) 
-- CODE:
# Use este codigo como ponto de partida
print("Boomerang")
# Leitura de valores de entrada
var = input("Boomerang")
# Impressao de saidas print("var")
print(var)
-- EXECUTION TIME:
0.136371
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Boomerang
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Boomerang
Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:57:40) 
-- CODE:
# Use este codigo como ponto de partida
print("Boomerang")
# Leitura de valores de entrada
var = input("Digite o nome: Boomerang")
# Impressao de saidas print("var")
print(var)
-- EXECUTION TIME:
0.187011
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Boomerang
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Boomerang
Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:09:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Boomerang")
# Impressao de saidas print("var")
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:09:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Boomerang")
# Impressao de saidas print("var")
print(var)
-- EXECUTION TIME:
0.182822
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
